--- a/ComicWebApp/Scripts/home/home.html
+++ b/ComicWebApp/Scripts/home/home.html
@@ -13,7 +13,7 @@
 <!-- START TRUYỆN MỚI CẬP NHẬT -->
 <div class="row" id="wrapp_content_mc">
     <div class="col-md-8">
-    <div class="wrapper_truyemoicapnhat">
+        <div class="wrapper_truyemoicapnhat">
 
             <div class="title_doctruyen manga">
                 <div class="bg left_bar fl"></div>
@@ -27,11 +27,11 @@
             <div class="lst_truyen_moidang">
                 <cmapp-story-list [stories]="lastestUpdateStories">loading....</cmapp-story-list>
                 <div class="pull-right">
-                    <a  [routerLink]="['Directory']">Xem thêm nhiều truyện nữa &raquo;</a>
+                    <a [routerLink]="['Directory']">Xem thêm nhiều truyện nữa &raquo;</a>
                 </div>
             </div>
-            </div>
-    <div class="wrapper_truyemoicapnhat">
+        </div>
+        <div class="wrapper_truyemoicapnhat">
             <div class="title_doctruyen moicapnhat">
                 <div class="bg lefttbar3 fl"></div>
                 <div class="centertext fl" style="width:655px;padding-top:3px;">
@@ -46,7 +46,7 @@
         </div>
 
     </div>
-    
+
     <!-- START RIGHT CONTENT-->
     <div class="col-md-4 wrapper_qc">
 
@@ -86,7 +86,7 @@
         <a href="apphamtruyen.html" title="App Hamtruyen dành cho Android trên Google Play" target="_blank">
             <img src="http://hamtruyen.vn/bannerqc/apphamtruyen.png" width="100%" alt="App Hamtruyen dành cho Android trên Google Play" />
         </a>
-
+        <div class="mgtop10"> </div>
         <cmapp-story-genres></cmapp-story-genres>
         <div class="row wrapper_theloai mgtop10">
             <div class="col-xs-12">
@@ -94,13 +94,13 @@
 
                 <div class="fb-like-box" data-href="https://www.facebook.com/hamtruyen" data-width="300" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
                 <script type="text/javascript">
-                        (function (d, s, id) {
-                            var js, fjs = d.getElementsByTagName(s)[0];
-                            if (d.getElementById(id)) return;
-                            js = d.createElement(s); js.id = id;
-                            js.src = "../connect.facebook.net/en_US/all.js#xfbml=1";
-                            fjs.parentNode.insertBefore(js, fjs);
-                        }(document, 'script', 'facebook-jssdk'));
+                    (function (d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0];
+                        if (d.getElementById(id)) return;
+                        js = d.createElement(s); js.id = id;
+                        js.src = "../connect.facebook.net/en_US/all.js#xfbml=1";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));
 
                 </script>
 
