--- a/ComicWebApp/Scripts/story/story-detail.html
+++ b/ComicWebApp/Scripts/story/story-detail.html
@@ -52,7 +52,7 @@
                     </section>
                     <!-- end row title-->
                     <div class="nano">
-                        <div class="content" tabindex="0">
+                        <div class="content nano-content" tabindex="0">
                             <section class="row_chap" *ngFor="#chap of story.Chapters">
                                 <div class="col_chap tenChapter"><a (click)="readChapter(chap)">{{chap.Name}}</a> </div>
                                 <div class="col_chap ngaydang"></div>
