change to user aliasname

--- a/ComicWebApp/Scripts/story/story-detail.html
+++ b/ComicWebApp/Scripts/story/story-detail.html
@@ -39,7 +39,7 @@
         <div class="info_detailtruyen mgtop10" id="list_chapter_truyen" *ngIf="story.Chapters.length > 0">
             <!--start list_chapter_truyen-->
             <div class="title_tab">
-                <div class="tab active fl">Danh sách chương truyện</div>
+                <div class="tab active fl">Danh sách chương truyện - [{{story.Chapters.length}}]</div>
                 <br class="clear">
             </div>
             <div id="wwrapper_lisstchap">
