some router update

--- a/ComicWebApp/Scripts/directory/directory.html
+++ b/ComicWebApp/Scripts/directory/directory.html
@@ -3,7 +3,7 @@
         <div class="title_doctruyen manga">
             <div class="bg left_bar fl"></div>
             <div class="centertext fl" style="width:632px;padding-top:3px;">
-                Danh Sách Truyện
+                Danh Sách Truyện  [<span class="">{{totalItems}}</span>]
                 <label class="label_right">
                     Sắp xếp :
                     <a id="sort1" onclick="sort(1)">Tên</a> | <a id="sort2" onclick="sort(2)">Mới Cập Nhật</a> | <a id="sort3" onclick="sort(3)">Lượt xem</a>
@@ -53,6 +53,7 @@
             </div>
         </div>
 
+        <div class="mgtop10"></div>
         <cmapp-story-genres></cmapp-story-genres>
 
     </div>
