--- a/ComicWebApp/Scripts/app.html
+++ b/ComicWebApp/Scripts/app.html
@@ -92,7 +92,7 @@
                             <li>
                                 <a href="/User/Truyen-Theo-Doi.html">Truyện đang theo dõi</a>
                             </li>
-                            <li><a href="/User/Logout.html?Logout=1">Đăng xuất</a></li>
+                            <li><a (click)="logout()">Đăng xuất</a></li>
                         </ul>
                     </div>
                     <div class="notify_wrapper dropdown fl">
