--- a/ComicWebApp/Scripts/shared/story-carousel.html
+++ b/ComicWebApp/Scripts/shared/story-carousel.html
@@ -1,5 +1,5 @@
 ﻿<div class="jcarousel-wrapper">
-    <div class="bxslider" myBxSlider>
+    <div class="bxslider" >
         <div class="item slide" *ngFor="#story of stories; #i=index" [class.active]="i<1">
             <div class="item_truyennendoc">
                 <a (click)="viewStory(story)">
